--- a/fileviewer/build.gradle
+++ b/fileviewer/build.gradle
@@ -26,8 +26,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    //implementation files('tbs_sdk_thirdapp_v3.6.0.1249_43610.jar')
 }
